# rs-backend-tpl

./: .dockerignore  .gitignore  Cargo.toml  Cargo.toml.liquid  Dockerfile  Dockerfile.api  Dockerfile.liquid  Dockerfile.task  README.md.liquid  cargo-generate.toml  config.toml  docker-compose.yml  pre-script.rhai  readme.md  setup-template.sh  supervisord.conf  sync-cargo-toml.sh  sync-main.sh  update-cargo-toml.sh
.cargo-generate/: template-values.toml
api/: Cargo.toml  Cargo.toml.liquid  config.toml
api/rest/: admin_requests.rest  api_requests.rest  internal_message_requests.rest  role_requests.rest
api/src/: app_state.rs  config.rs  jwt.rs  logger.rs  main.rs  main.rs.liquid  statics.rs
api/src/actors/: rbac.rs
api/src/api/: routes.rs
api/src/api/handlers/admin/: admin_handlers.rs  mod.rs  types.rs
api/src/api/handlers/login/: login_handles.rs
api/src/api/middlewares/: authorization.rs  mod.rs
api/src/core/: errors.rs  response.rs  routes.rs  schema.rs
api/src/core/handlers/: mod.rs
api/src/core/handlers/admin/: admin_handlers.rs  types.rs
api/src/core/handlers/internal_message/: internal_message_handlers.rs  types.rs
api/src/core/handlers/login/: login_handles.rs
api/src/core/handlers/message/: message_handlers.rs  mod.rs  types.rs
api/src/core/handlers/role/: mod.rs  role_handlers.rs  types.rs
api/src/core/handlers/upload/: mod.rs  types.rs  upload_handlers.rs
api/src/core/middlewares/: authorization.rs  mod.rs  operation_log.rs  rbac.rs
api/src/database/repositories/: base.rs  mod.rs  role.rs  user.rs
api/src/entities/: mod.rs  role.rs  user.rs
api/src/rbac/: model.rs
apps/scheduler/: Cargo.toml  README.md
apps/web-api/: Cargo.toml  README.md
apps/web-api/rest/: admin_requests.rest  internal_message_requests.rest  role_requests.rest  upload_requests.rest
apps/web-api/src/: main.rs
apps/web-api/src/core/: errors.rs  mod.rs  response.rs
apps/web-api/src/core/handlers/: mod.rs
apps/web-api/src/core/handlers/admin/: admin_handlers.rs
apps/web-api/src/core/handlers/internal_message/: mod.rs  types.rs
apps/web-api/src/core/handlers/message/: message_handlers.rs  types.rs
apps/web-api/src/core/handlers/product/: types.rs
apps/web-api/src/core/handlers/role/: mod.rs  role_handlers.rs
apps/web-api/src/core/handlers/upload/: types.rs  upload_handlers.rs
apps/web-api/src/core/middlewares/: authorization.rs
config/: Cargo.toml  Cargo.toml.bak  Cargo.toml.liquid  README.md
config/src/: command.rs  errors.rs  lib.rs  lib.rs.liquid  nacos.rs  nacos_watch.rs
container/: Cargo.toml  Cargo.toml.bak  Cargo.toml.liquid
container/src/: lib.rs  lib.rs.liquid
crates/entity-core/: Cargo.toml  README.md
crates/entity-core/src/: lib.rs
crates/libs/src/: lib.rs
crates/libs/src/cache/: memory.rs  mod.rs
crates/rbac/: README.md
crates/rbac/src/: actor.rs  lib.rs
crates/storage/: README.md
crates/storage/src/: local.rs
database/: Cargo.toml  Cargo.toml.bak  Cargo.toml.liquid  README.md
database/src/: errors.rs  lib.rs  lib.rs.liquid
database/src/repositories/: base.rs  collection_names.rs  internal_message.rs  message.rs  mod.rs  operation_log.rs  role.rs  user.rs
database/src/repositories/message/: impl_service.rs  message.rs  mod.rs  service_impl.rs
database/src/repositories/product/: brand.rs  category.rs  mod.rs  product.rs  supplier.rs
entities/: Cargo.toml  Cargo.toml.bak  Cargo.toml.liquid
entities/src/: README.md  errors.rs  internal_message.rs  lib.rs  message.rs  operation_log.rs  role.rs  user.rs
entities/src/auth/: README.md  secret.rs
entities/src/message/: README.md
entities/src/product/: brand.rs  category.rs  mod.rs  product.rs  sku.rs  supplier.rs
entity-base/: Cargo.toml  Cargo.toml.bak  Cargo.toml.liquid  README.md
entity-base/src/: lib.rs.liquid
entity-core/: Cargo.toml.liquid
entity-derive/: Cargo.toml  Cargo.toml.bak  Cargo.toml.liquid  README.md
entity-derive/src/: lib.rs
entity-macros/: Cargo.toml  Cargo.toml.liquid  README.md
entity-macros/src/: lib.rs.liquid
libs/: Cargo.toml  Cargo.toml.bak  Cargo.toml.liquid  README.md
libs/src/: lib.rs  logger.rs
libs/src/cache/: memory.rs  mod.rs
rbac/: Cargo.toml  Cargo.toml.bak  Cargo.toml.liquid
rbac/src/: actor.rs  enforcer.rs  error.rs  lib.rs  model.rs
services/: Cargo.toml  Cargo.toml.liquid  README.md
services/src/: admin.rs  errors.rs  lib.rs  lib.rs.liquid  role.rs  utils.rs
services/src/admin/: README.md  mod.rs  repository.rs  service.rs  types.rs
services/src/brand/: dto.rs  mod.rs  repository.rs  service.rs
services/src/category/: dto.rs  repository.rs  service.rs
services/src/internal_message/: dto.rs  mod.rs  repository.rs  service.rs  types.rs
services/src/message/: mod.rs  service.rs  types.rs
services/src/message/channels/: email.rs  internal.rs  mod.rs  sms.rs  websocket.rs
services/src/notification/: README.md  dto.rs  mod.rs  repository.rs  service.rs
services/src/notification/channels/: internal.rs
services/src/operation_log/: dto.rs  mod.rs  repository.rs  service.rs  types.rs
services/src/product/: dto.rs  mod.rs  repository.rs  service.rs
services/src/role/: mod.rs  service.rs  types.rs
services/src/supplier/: dto.rs  repository.rs  service.rs
src/: config.rs  main.rs
src/actors/: rbac.rs
src/api/: mod.rs  routes.rs
src/api/middlewares/: authorization.rs  rbac.rs
src/database/repositories/: base.rs  macros.rs  mod.rs  role.rs  user.rs
src/entities/: base.rs  common.rs  mod.rs  role.rs  user.rs
src/entities/auth/: mod.rs  secret.rs
src/entities/time/: date_range.rs
src/handles/: errors.rs  middlewares.rs  mod.rs  routes.rs  schema.rs
src/handles/login/: login_handles.rs  types.rs
src/rbac/: enforcer.rs  mod.rs
storage/: Cargo.toml  Cargo.toml.liquid
storage/src/: error.rs  lib.rs
storage/src/multipart/: error.rs  mod.rs
task/: Cargo.toml  Cargo.toml.bak  Cargo.toml.liquid
task/src/: main.rs  main.rs.liquid
task/src/tasks/: cleanup.rs  message_retry.rs  mod.rs
workspace-hack/: Cargo.toml
(+4 files in other folders)
