[package]
name = "rs-backend-tpl"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["macros", "multipart"] }
axum-valid = "0.21.0"
casbin = { version = "2.5.0", features = ["tokio"] }
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.22"
mongodb = "3.1.0"
rs-snowflake = "0.6.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros"] }
toml = "0.8.19"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["full"] }
validator = { version = "0.19.0", features = ["derive"] }
sha2 = "0.10.8"
md5 = "0.7.0"
async-trait = "0.1.83"
uuid = "1.11.0"
reqwest = { version = "0.12.9", features = [
    "json",
    "multipart",
    "rustls-tls",
], default-features = false }
rand = "0.8.5"
percent-encoding = "2.3.1"
urlencoding = "2.1.3"
entity-derive = { path = "../entity-derive" }
entity-base = { path = "../entity-base" }
rbac = { path = "../rbac" }
