[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
nacos-sdk = "0.4.2"
log.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
