[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { workspace = true }
async-trait = { workspace = true }
futures-util = "0.3"
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
entity-core = { path = "../entity-core" }
rbac = { path = "../rbac" }
entities = { path = "../entities" }
futures = "0.3.31"
services = { path = "../services" }
