[package]
name = "libs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
rs-snowflake = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
dashmap = "6.1.0"
serde_json = { workspace = true }
