[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
async-trait = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
libs = { path = "../libs" }
[dev-dependencies]
tempfile = "3.2"
tokio = { workspace = true, features = ["full"] }
