[package]
name = "task"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-cron-scheduler = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
database = { path = "../database" }
libs = { path = "../libs" }
config = { path = "../config" }
container = { path = "../container" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
