[package]
name = "web-api"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["macros", "multipart"] }
chrono = { workspace = true }
hmac = "0.12.1"
jwt = "0.16.0"
log = { workspace = true }

mongodb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["full"] }
validator = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }

rbac = { path = "../../crates/rbac" }
storage = { path = "../../crates/storage" }
libs = { path = "../../crates/libs" }
database = { path = "../../database" }
entities = { path = "../../entities" }
services = { path = "../../services" }
config = { path = "../../config" }
container = { path = "../../container" }
